# JK-1

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format.yml
JK-1/: CMakeLists.txt
JK-1/resource/: jk1editor.uidesc  myplugineditor.uidesc  resource.h  win32resource.aps  win32resource.rc
JK-1/source/: jk1cids.h  jk1controller.cpp  jk1controller.h  jk1entry.cpp  jk1processor.cpp  jk1processor.h  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  projectversion.h  version.h
